--- a/list.html
+++ b/list.html
@@ -1,1 +1,15 @@
+<h2>材料</h2>
+<ul>
+  <li>水 500ml</li>
+  <li>砂糖 1kg</li>
+  <li>塩 少々</li>
+</ul>
 
+<h2>手順</h2>
+<ol>
+  <li>水500mlと砂糖500gを鍋に入れる</li>
+  <li>かき混ぜながら強火で30分程度煮る</li>
+  <li>その後残っている砂糖を加えながら更に1時間程度煮る</li>
+  <li>最後に少々塩を加える</li>
+  <li>完成</li>
+</ol>
