--- a/table.html
+++ b/table.html
@@ -1,1 +1,14 @@
-
+<!DOCKTYPE html>
+<html lang="ja">
+  <head>
+    <title テーブル>
+  </head>
+  <body>
+    <table>
+      <tbody>
+        <tr><th>1</th></tr>
+        <tr><td>A</td></tr>
+      </tbody>
+    </table>
+  </body>
+</html>
